180/ Deleted Mysterious Potion file because it is no longer used.
181/ Added Damage Up Relic Set ( which act more of a additional prefix ).
182/ Change how Relic Set name is formatted.
183/ Changing fixed hardcoded localization key to universal one for easier time to manage.
184/ Make it no longer neccessary to calculate tier up value from relic in Effect method.
185/ Implemented new change to relic and also adjusted Relic RNG.
186/ Deleted Triple Debuff Template because the condition for the template is too difficult.
187/ Deleted CombatV4Template template because it is too bloated.
188/ Update World generation to add in many mini forest
189/ Changed relic set activation condition.
190/ Added Defenses Up relic set.
191/ Reworked Minishark.
192/ Added Cursed Kingdom from ModJam2 mod.
193/ Renamed ModAchievement system to RoguelikeAchievement
194/ Simplified the functionality of PlayerStatsHandler.AddStatsToPlayer
195/ Lead Irradiation now have effect on player.
196/ Work on some localization of the mod.
197/ A lot of fixes and patched on world biome handler.
198/ Better Keen potion buff check.
199/ Deleted Altar tile due to no longer needing it.
200/ Update the mod's description.
201/ Patched up Update World Inner method.
202/ Added Weaken skill.
203/ Fixed a bug caused by Staff overhaul.
204/ Added more subworld for boss.
205/ Buffed The Orbit.
206/ Buffed The Two Evil.
207/ Buffed The Tundra Bow.
208/ Minor optimization.
209/ Made it easier to reuse portal projectile for future subworld.
210/ Fixed Potential bug that would caused the world generation to generate multiple time.
211/ Overall work on LootBox lord to make it more playable.
212/ Reworked Platinum Bow.
213/ Minor code clean up.
214/ Finish up Lootbox Lord boss fight
215/ Deleted config option Roguelike Mode to avoid confusion when configuring the mod.
216/ Updated Localization for better explanation of the configuration setting.
217/ Significantly buff Copper Bow wait mechanic.