@@ -2242,7 +2242,7 @@ Mods: {
 					Bow mode : Arrow are imbues with special curse that constantly spawn dark wisp for 1s.
 					Gun mode : Shoot arch of 4 smaller dark bolt deal 150% of weapon damage.
 
-					Wait additional 1s to releases dark wave dealing 200% weapon damage
+					Wait additional 1s to releases dark wave dealing 200% weapon damage which completely ignore defense
 
 					On switching to other weapon after dealing 34000 damage, you shoot dark bolt and spawn dark wisp for 6s
 					'''
